# gaffer-v99

./: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  run-and-build.bat  run-fifa-enrichment.bat  setup-and-run.bat  worklog.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/portrait-sources/: README.md
src-tauri/capabilities/: default.json
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/src/: game_database.rs  game_persistence.rs  legacy_migration.rs  lib.rs  migrations.rs  save_index.rs  save_index_manager.rs  save_load_error.rs  save_manager.rs
src-tauri/crates/db/src/repositories/: competition_repo.rs  league_repo.rs  manager_repo.rs  meta_repo.rs  mod.rs  national_team_repo.rs  player_repo.rs  staff_repo.rs  stats_repo.rs  team_repo.rs
src-tauri/crates/db/src/sql/: v001_initial_schema.sql  v029_competition_save_metadata.sql  v030_competitions_and_national_teams.sql  v031_competition_groups.sql  v032_competition_berths.sql  v033_competition_season_start.sql  v034_player_jersey_number.sql  v035_team_kit_pattern.sql  (+12 more)
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: league.rs  lib.rs  manager.rs  message.rs  national_team.rs  news.rs  player.rs  staff.rs  stats.rs  team.rs  world_history.rs
src-tauri/crates/engine/: Cargo.toml
src-tauri/crates/engine/src/: ai.rs  event.rs  lib.rs  report.rs  shared.rs  sparse_sim.rs  types.rs
src-tauri/crates/engine/tests/: live_match_tests.rs  simulation_tests.rs  tactics_phase_tests.rs
src-tauri/crates/ofm-cli/: Cargo.toml
src-tauri/crates/ofm-cli/src/: main.rs
src-tauri/crates/ofm_core/: Cargo.toml
src-tauri/crates/ofm_core/src/: advance_results.rs  aging.rs  ai_hiring.rs  ai_training.rs  board_objectives.rs  catchup.rs  club.rs  contract_wage_policy.rs  contracts.rs  delegated_renewals.rs  end_of_season.rs  finances.rs  firing.rs  football_identity.rs  game.rs  group_stage.rs  history_generation.rs  job_offers.rs  lib.rs  live_match_manager.rs  messages.rs  national_team.rs  nations.rs  news.rs  player_identity.rs  player_rating.rs  player_wear.rs  promotion.rs  reputation.rs  roster.rs  schedule.rs  scouting.rs  season_awards.rs  season_context.rs  squad_safety.rs  state.rs  training.rs  transfers.rs  world_cup.rs
src-tauri/crates/ofm_core/tests/: club_tests.rs  contracts_tests.rs  end_of_season_tests.rs  finances_tests.rs  legacy_save_migration_tests.rs  live_match_manager_tests.rs  messages_tests.rs  player_events_tests.rs  player_rating_tests.rs  random_events_tests.rs  scenario_tests.rs  scouting_tests.rs  season_sim_report.rs  slices_players_tests.rs  slices_squad_tests.rs  slices_staff_tests.rs  slices_teams_tests.rs  training_tests.rs  transfers_tests.rs  turn_tests.rs
src-tauri/crates/sim-bench/: Cargo.toml
src-tauri/crates/sim-bench/src/: builder.rs  html.rs  main.rs  stats.rs  terminal.rs
src-tauri/data/: .ignore  pundits.json
src-tauri/data_pipeline/: README.md  add_staff_v99.py  build_fifa_world.py  build_world.py  comprehensive_data_fix.py  download_club_logos.py  download_faces_multi.py  download_images_proxy.py  enrich_with_fifa.py  fetch_all_images.py  fetch_next.py  fetch_real_data.py  fix_attributes_v99.py  fix_database_v99.py  fix_database_v99b.py  generate_synthetic_test_data.py  requirements.txt  robust_fetch.py  sample_fbref.html  scraper.html  scraper.py  scraper_oneclick.html
src-tauri/data_pipeline/input/: gaffer_players.json
src-tauri/databases/: fetch_manifest.json  gaffer_world.json  image_manifest.json
src-tauri/src/: lib.rs
src-tauri/src/application/: live_match.rs  team_talk.rs  time_advancement.rs  time_blockers.rs
src-tauri/src/commands/: club.rs  contracts.rs  finances.rs  game.rs  jobs.rs  live_match.rs  meaning.rs  messages.rs  mod.rs  package_editor.rs  portraits.rs  season.rs  settings.rs  sim_lab.rs  slices.rs  squad.rs  staff.rs  time.rs  transfers.rs  util.rs  world.rs
src-tauri/src/commands/stats/: shared.rs  tests.rs
src-tauri/src/mcp_server/: server.rs
src-tauri/src/mcp_server/tools_impl/: info.rs  live_match.rs  time.rs
(+607 files in other folders)
