[package]
name = "db"
version = "0.3.0"
edition = "2024"

[features]
default = []
# Dev-only: snapshot each save's `.db` file before every overwrite into a
# date-stamped sibling (`<uuid>.db.snap-YYYYMMDD-HHMMSS.fff`). The 20 most
# recent snapshots per save are kept; older ones are pruned automatically.
# Costs roughly one `.db`-sized copy per save, so plan for ~1 GB of disk per
# save you're debugging.
save-snapshots = []

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
domain = { version = "0.3.0", path = "../domain" }
log = "0.4"
ofm_core = { version = "0.3.0", path = "../ofm_core" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
