[package]
name = "sim-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ofm-sim-bench"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"
